--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "hexo": "^6.0.0",
     "hexo-butterfly-article-double-row": "^1.0.2",
+    "hexo-butterfly-wowjs": "^1.0.5",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
