--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -76,7 +76,8 @@ favicon: /img/favicon.png
 
 # 头像
 avatar:
-  img: https://cdn1.tianli0.top/gh/recreyed/img/avatar/avatar.jpg
+  #img: https://cdn1.tianli0.top/gh/recreyed/img/avatar/avatar.jpg
+  img: https://f004.backblazeb2.com/file/recreyed/hexo/88978a8f-1b03-4797-8fee-dc0cad2b637c.png
   effect: false
 
 # 禁用所有banner图
@@ -87,11 +88,14 @@ index_img: transparent
 # 默认顶部图
 default_top_img: false
 # 时间轴(归档)顶部图
-archive_img: https://cdn1.tianli0.top/gh/recreyed/img/bgPic/shijianzhou-202210101000575.jpg
+#archive_img: https://cdn1.tianli0.top/gh/recreyed/img/bgPic/shijianzhou-202210101000575.jpg
+archive_img: https://f004.backblazeb2.com/file/recreyed/hexo/970507bf-8abd-4b36-82b6-af372cabd752.jpeg
 # 子标签顶部图 (不设置即为默认顶部图)
-tag_img: https://cdn1.tianli0.top/gh/recreyed/img/bgPic/biaoqian-202210101000620.jpg
+#tag_img: https://cdn1.tianli0.top/gh/recreyed/img/bgPic/biaoqian-202210101000620.jpg
+tag_img: https://f004.backblazeb2.com/file/recreyed/hexo/b39f7c3f-1b1f-4b5f-84bb-53231dfe65aa.jpeg
 # 子分类页面顶部图 (不设置即为默认顶部图)
-category_img: https://cdn1.tianli0.top/gh/recreyed/img/bgPic/fenlei-202210101001711.jpg
+#category_img: https://cdn1.tianli0.top/gh/recreyed/img/bgPic/fenlei-202210101001711.jpg
+category_img: https://f004.backblazeb2.com/file/recreyed/hexo/c30d0e39-7315-46f6-9d57-8dd4fd590cac.jpeg
 # 每个标签的顶部图
 # format:
 #  - tag name: xxxxx
@@ -111,7 +115,8 @@ cover:
   position: both
   # 文章默认封面
   default_cover:
-    - https://cdn1.tianli0.top/gh/recreyed/img/bgPic/index-202210100957658.jpg
+    #- https://cdn1.tianli0.top/gh/recreyed/img/bgPic/index-202210100957658.jpg
+    - https://f004.backblazeb2.com/file/recreyed/hexo/e15ba39e-95cc-4d48-8b85-ff7291dce776.jpeg
 # 图片加载失败默认展示
 error_img:
   flink: /img/friend_404.gif
@@ -177,10 +182,12 @@ post_copyright:
 reward:
   enable: true
   QR_code:
-    - img: https://cdn1.tianli0.top/gh/recreyed/img/reward/wxpay.png
+    #- img: https://cdn1.tianli0.top/gh/recreyed/img/reward/wxpay.png
+    - img: https://f004.backblazeb2.com/file/recreyed/hexo/0cb6db1d-719e-435d-912b-430b8d3a4fc9.png
       link:
       text: wechat
-    - img: https://cdn1.tianli0.top/gh/recreyed/img/reward/alipay.jpg
+    #- img: https://cdn1.tianli0.top/gh/recreyed/img/reward/alipay.jpg
+    - img: https://f004.backblazeb2.com/file/recreyed/hexo/59376c9b-f68a-4fc3-a628-38048eca5ce2.jpeg
       link:
       text: alipay
 
@@ -255,7 +262,8 @@ valine:
   appKey: cmaONbFloKuSH7mf7ToCCiux
   avatar: monsterid
   serverURLs: https://hkxuu1j3.lc-cn-n1-shared.com # This configuration is suitable for domestic custom domain name users, overseas version will be automatically detected (no need to manually fill in)
-  bg: https://cdn1.tianli0.top/gh/recreyed/img/bgPic/pinglunditu.webp # valine background
+  #bg: https://cdn1.tianli0.top/gh/recreyed/img/bgPic/pinglunditu.webp # valine background
+  bg: https://f004.backblazeb2.com/file/recreyed/hexo/08bdfa62-01c6-4c9d-a365-d53b8e1a5a6d.webp
   visitor: false
   option:
 
@@ -373,7 +381,7 @@ tag_ui: # 留空或 index
 # 网站背景图(可以设置颜色或图片)
 # The formal of image: url(http://xxxxxx.com/xxx.jpg)
 # background: url(https://cdn1.tianli0.top/gh/recreyed/img/bgPic/index-202210100957658.jpg)
-background: url(https://cdn1.tianli0.top/gh/recreyed/img/bgPic/index-202210100957658.jpg)
+background: url(https://f004.backblazeb2.com/file/recreyed/hexo/e15ba39e-95cc-4d48-8b85-ff7291dce776.jpeg)
 
 # Footer Background
 footer_bg: transparent
