--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "hexo": "^6.0.0",
+    "hexo-butterfly-categories-card": "^1.0.0",
     "hexo-butterfly-swiper": "^1.0.12",
     "hexo-butterfly-wowjs": "^1.0.5",
     "hexo-deployer-git": "^3.0.0",
