--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -7,5 +7,5 @@
       descr: 前端、linux
     - name: 子兔Antg
       link: https://blog.csdn.net/weixin_44745147/
-      avatar: https://cdn.jsdelivr.net/gh/recreyed/img/avatar/antg.jpg
+      avatar: https://profile-avatar.csdnimg.cn/311de4c2556744648ece82a3d8f48334_weixin_44745147.jpg
       descr: java
