--- a/_config.yml
+++ b/_config.yml
@@ -119,8 +119,8 @@ wowjs:
   animateitem:
     - class: recent-post-item #必填项，需要添加动画的元素的class
       style: animate__fadeIn #必填项，需要添加的动画
-      duration: 0.5s #选填项，动画持续时间，单位可以是ms也可以是s。例如3s，700ms。
-      delay: 0.5s #选填项，动画开始的延迟时间，单位可以是ms也可以是s。例如3s，700ms。
+      duration: 0.3s #选填项，动画持续时间，单位可以是ms也可以是s。例如3s，700ms。
+      delay: 0 #选填项，动画开始的延迟时间，单位可以是ms也可以是s。例如3s，700ms。
       offset: 0 #选填项，开始动画的距离（相对浏览器底部）
       iteration: 1 #选填项，动画重复的次数
     - class: card-widget
