--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -128,8 +128,8 @@ post_meta:
   page: # Home Page
     date_type: both # created or updated or both 主頁文章日期是創建日或者更新日或都顯示
     date_format: date # date/relative 顯示日期還是相對日期
-    categories: false # true or false 主頁是否顯示分類
-    tags: false # true or false 主頁是否顯示標籤
+    categories: true # true or false 主頁是否顯示分類
+    tags: true # true or false 主頁是否顯示標籤
     label: false # true or false 顯示描述性文字
   post:
     date_type: both # created or updated or both 文章頁日期是創建日或者更新日或都顯示
@@ -151,7 +151,7 @@ wordcount:
 # 3: auto_excerpt (default)
 # false: do not show the article introduction
 index_post_content:
-  method: 2
+  method: 1
   length: 500 # if you set method to 2 or 3, the length need to config
 
 # url随标题变化
