--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -7,9 +7,7 @@ menu:
   标签: /tags/ || fas fa-tags
   #分类: /categories/ || fas fa-folder-open
   清单||fas fa-list:
-    音乐: /music/ || fas fa-music
-    照片: /Gallery/ || fas fa-images
-    电影: /movies/ || fas fa-video
+    图片: /Gallery/ || fas fa-images
   友人帐: /link/ || fas fa-link
   关于: /about/ || fas fa-heart
 
