网站图标更换

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -70,7 +70,7 @@ katex:
 # --------------------------------------
 
 # Favicon（網站圖標）
-favicon: /img/favicon.png
+favicon: /img/favicon.svg
 
 # 头像
 avatar:
