更改透明度

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -69,7 +69,7 @@ katex:
 # Image (图片設置)
 # --------------------------------------
 
-# Favicon（網站圖標）
+# Favicon（网站图标）
 favicon: /img/favicon.svg
 
 # 头像
