--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -460,7 +460,7 @@ aside:
     sort_order: # Don't modify the setting unless you know how it works
   # 分类
   card_categories:
-    enable: true
+    enable: false
     limit: 0 # if set 0 will show all
     expand: none # none/true/false
     sort_order: # Don't modify the setting unless you know how it works
