--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "g": "^2.0.1",
     "hexo": "^6.3.0",
+    "hexo-abbrlink": "^2.2.1",
     "hexo-butterfly-categories-card": "^1.0.0",
     "hexo-butterfly-swiper": "^1.0.12",
     "hexo-butterfly-wowjs": "^1.0.5",
