--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -4,7 +4,7 @@
     - name: Recreyed
       link: https://recreyed.ml/
       avatar: https://img.recreyed.ml/avatar-1.png
-      descr: 前端
+      descr: 我
     - name: HHR
       link: https://codehhr.cn/
       avatar: https://codehhr.coding.net/p/codehhr/d/images/git/raw/master/avatar/tusiji.png
@@ -13,3 +13,7 @@
       link: https://blog.csdn.net/weixin_44745147/
       avatar: https://profile-avatar.csdnimg.cn/311de4c2556744648ece82a3d8f48334_weixin_44745147.jpg
       descr: java
+    - name: Akilar
+      link: https://akilar.top/
+      avatar: https://npm.elemecdn.com/akiblog@1.0.0/img/author.webp
+      descr: hexo butterfly主题魔改教父
