--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -84,7 +84,7 @@ disable_top_img: false
 # 主页背景图
 index_img:
 # 默认顶部图
-default_top_img: 
+default_top_img:
 # 时间轴(归档)顶部图
 archive_img: false
 # 子标签顶部图 (不设置即为默认顶部图)
@@ -210,9 +210,9 @@ post_pagination: 2
 
 # 文章过期提醒
 noticeOutdate:
-  enable: false
+  enable: true
   style: flat # style: simple/flat
-  limit_day: 500 # When will it be shown
+  limit_day: 365 # When will it be shown
   position: top # position: top/bottom
   message_prev: It has been
   message_next: days since the last update, the content of the article may be outdated.
@@ -293,7 +293,7 @@ categoryBar:
     cover: https://img.recreyed.ml/categories-3.jpg
   - descr: 博客相关
     cover: https://img.recreyed.ml/categories-2.jpg
-  - descr: 生活
+  - descr: 生活账本
     cover: https://img.recreyed.ml/categories-4.jpg
   - descr: 电子杂物
     cover: https://img.recreyed.ml/categories-1.jpg
@@ -439,14 +439,14 @@ footer_bg: false
 # the position of bottom right button/default unit: px (右下角按鈕距離底部的距離/默認單位為px)
 rightside-bottom:
 
-# Enter transitions (開啓網頁進入效果)
+# Enter transitions (开启网页进入效果)
 enter_transitions: true
 
-# Default display mode (網站默認的顯示模式)
+# Default display mode (网站默认显示模式)
 # light (default) / dark
 display_mode: light
 
-# Beautify (美化頁面顯示)
+# Beautify (美化頁面显示)
 beautify:
   enable: true
   field: site # site/post
@@ -462,7 +462,7 @@ font:
   code-font-family:
 
 # 标题字体
-# 左上角網站名字 主頁居中網站名字
+# 左上角网站名字 主頁居中网站名字
 blog_title_font:
   font_link: https://fonts.googleapis.com/css?family=Playball
   font-family: Playball
@@ -475,7 +475,7 @@ hr_icon:
 
 # the subtitle on homepage (主頁subtitle)
 subtitle:
-  enable: true
+  enable: false
   # Typewriter Effect (打字效果)
   effect: false
   # loop (循環打字)
@@ -505,7 +505,7 @@ aside:
   # 作者卡片
   card_author:
     enable: true
-    description:
+    description: 不可结缘  徒增伤悲
     button:
       enable: false
       icon: fab fa-github
@@ -517,17 +517,17 @@ aside:
     limit: 0 # if set 0 will show all
     color: false
     sort_order: # Don't modify the setting unless you know how it works
-  # 分类
-  card_categories:
-    enable: false
-    limit: 0 # if set 0 will show all
-    expand: none # none/true/false
-    sort_order: # Don't modify the setting unless you know how it works
   # 网站统计
   card_webinfo:
     enable: true
     post_count: true
     last_push_date: true
+    sort_order: # Don't modify the setting unless you know how it works
+    # 分类
+  card_categories:
+    enable: false
+    limit: 0 # if set 0 will show all
+    expand: none # none/true/false
     sort_order: # Don't modify the setting unless you know how it works
   # 最近发表
   card_recent_post:
@@ -586,10 +586,10 @@ translate:
   # The text of the button when the language is Traditional Chinese
   msgToSimplifiedChinese: '簡'
 
-# Read Mode (閲讀模式)
+# 阅读模式
 readmode: true
 
-# dark mode
+# 黑夜模式
 darkmode:
   enable: true
   # Toggle Button to switch dark/light mode
@@ -653,7 +653,7 @@ note:
 # It may contain bugs and unstable, give feedback when you find the bugs.
 # https://github.com/MoOx/pjax
 pjax:
-  enable: false
+  enable: true
   exclude:
   # - xxxx
   # - xxxx
@@ -668,7 +668,7 @@ aplayerInject:
 # position 彈窗位置
 # 可選 top-left / top-center / top-right / bottom-left / bottom-center / bottom-right
 snackbar:
-  enable: false
+  enable: true
   position: bottom-left
   bg_light: '#49b1f5' # The background color of Toast Notification in light mode
   bg_dark: '#121212' # The background color of Toast Notification in dark mode
@@ -690,17 +690,6 @@ lazyload:
   field: site # site/post
   placeholder:
   blur: false
-
-# PWA
-# See https://github.com/JLHwung/hexo-offline
-# ---------------
-# pwa:
-#   enable: false
-#   manifest: /pwa/manifest.json
-#   apple_touch_icon: /pwa/apple-touch-icon.png
-#   favicon_32_32: /pwa/32.png
-#   favicon_16_16: /pwa/16.png
-#   mask_icon: /pwa/safari-pinned-tab.svg
 
 # Open graph meta tags
 # https://developers.facebook.com/docs/sharing/webmasters/
