--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -5,7 +5,7 @@ menu:
   首页: / || fas fa-home
   时间轴: /archives/ || fas fa-archive
   标签: /tags/ || fas fa-tags
-  #分类: /categories/ || fas fa-folder-open
+  分类: /categories/ || fas fa-folder-open
   清单||fas fa-list:
     图片: /Gallery/ || fas fa-images
   友人帐: /link/ || fas fa-link
@@ -258,29 +258,6 @@ valine:
   bg: https://img.recreyed.ml/pinglun.webp
   visitor: false
   option:
-
-# hexo-butterfly-categories-card
-# see https://akilar.top/posts/a9131002/
-categoryBar:
-  enable: true # 开关
-  priority: 10 #过滤器优先权
-  enable_page: / # 应用页面
-  layout: # 挂载容器类型
-    type: id
-    name: recent-posts
-    index: 0
-  column: even # odd：3列 | even：4列
-  row: 1 #显示行数，默认两行，超过行数切换为滚动显示
-  message:
-  - descr: 前端知识
-    cover: https://img.recreyed.ml/categories-3.jpg
-  - descr: 博客相关
-    cover: https://img.recreyed.ml/categories-2.jpg
-  - descr: 生活账本
-    cover: https://img.recreyed.ml/categories-4.jpg
-  - descr: 电子杂物
-    cover: https://img.recreyed.ml/categories-1.jpg
-  custom_css: https://npm.elemecdn.com/hexo-butterfly-categories-card@1.0.0/lib/categorybar.css
 
 #文章展示动画
 wowjs:
