--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -5,7 +5,7 @@ menu:
   首页: / || fas fa-home
   时间轴: /archives/ || fas fa-archive
   标签: /tags/ || fas fa-tags
-  分类: /categories/ || fas fa-folder-open
+  # 分类: /categories/ || fas fa-folder-open
   清单||fas fa-list:
     图片: /Gallery/ || fas fa-images
   友人帐: /link/ || fas fa-link
