--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -467,7 +467,7 @@ site_verification:
 #   toc_color: "#00c4b6"
 #   blockquote_padding_color: "#49b1f5"
 #   blockquote_background_color: "#49b1f5"
-#   scrollbar_color: "#49b1f5"
+  scrollbar_color: "#f7f9fe"
 
 # The top_img settings of home page
 # default: top img - full screen, site info - middle (默認top_img全屏，site_info在中間)
