--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -266,10 +266,10 @@ categoryBar:
   - title: 前端知识
     cover: https://img.recreyed.ml/categories-3.jpg
     descr: 这是前端知识描述
-  - title: 博客相关
+  - title: 博客站点
     cover: https://img.recreyed.ml/categories-2.jpg
     descr: 这是博客相关描述
-  - title: 生活账本
+  - title: 生活日志
     cover: https://img.recreyed.ml/categories-4.jpg
     descr: 这是生活账本描述
   - title: 电子杂物
@@ -284,7 +284,7 @@ wowjs:
   animateitem:
   - class: recent-post-item #必填项，需要添加动画的元素的class
     style: animate__fadeIn #必填项，需要添加的动画
-    duration: 0.5s #选填项，动画持续时间，单位可以是ms也可以是s。例如3s，700ms。
+    duration: 0.7s #选填项，动画持续时间，单位可以是ms也可以是s。例如3s，700ms。
     delay: 0 #选填项，动画开始的延迟时间，单位可以是ms也可以是s。例如3s，700ms。
     offset: 0 #选填项，开始动画的距离（相对浏览器底部）
     iteration: 1 #选填项，动画重复的次数
