--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -266,12 +266,12 @@ categoryBar:
   - title: 前端知识
     cover: https://img.recreyed.ml/categories-3.jpg
     descr: 这是前端知识描述
-  - title: 博客站点
+  - title: 博客相关
     cover: https://img.recreyed.ml/categories-2.jpg
     descr: 这是博客相关描述
-  - title: 生活日志
+  - title: 生活相关
     cover: https://img.recreyed.ml/categories-4.jpg
-    descr: 这是生活账本描述
+    descr: 这是生活相关描述
   - title: 电子杂物
     cover: https://img.recreyed.ml/categories-1.jpg
     descr: 这是电子杂物描述
