--- a/source/_data/creativity.yml
+++ b/source/_data/creativity.yml
@@ -1,44 +1,32 @@
 - class_name: 开启创造力
   creativity_list:
-    - name: Vue
-      color: "#b8f0ae"
-      icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/633001374747b.png
-    - name: Photoshop
-      color: "#4082c3"
-      icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/63300647e1f10.png
-    - name: Node
-      color: "#333"
-      icon: https://npm.elemecdn.com/anzhiyu-blog@2.1.1/img/svg/node-logo.svg
-    - name: Webpack
-      color: "#2e3a41"
-      icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/26/6330ff27e5c9b.png
-    - name: Pinia
-      color: "#fff"
-      icon: https://npm.elemecdn.com/anzhiyu-blog@2.0.8/img/svg/pinia-logo.svg
-    - name: Python
-      color: "#fff"
-      icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/63300647dea51.png
-    - name: Vite
-      color: "#937df7"
-      icon: https://npm.elemecdn.com/anzhiyu-blog@2.0.8/img/svg/vite-logo.svg
-    - name: Flutter
-      color: "#4499e4"
-      icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/633004063ff15.png
-    - name: Java
-      color: "#fff"
-      icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/633005bf0fd1e.jpg
+    - name: HTML5
+      color: "#e9572b"
+      icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/633006f9ab27d.png
     - name: CSS3
       color: "#2c51db"
       icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/633006cc55e07.png
     - name: JS
       color: "#f7cb4f"
       icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/633006eee047b.png
-    - name: HTML
-      color: "#e9572b"
-      icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/633006f9ab27d.png
+    - name: Vue
+      color: "#b8f0ae"
+      icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/633001374747b.png
+    - name: Node
+      color: "#333"
+      icon: https://npm.elemecdn.com/anzhiyu-blog@2.1.1/img/svg/node-logo.svg
+    - name: Webpack
+      color: "#2e3a41"
+      icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/26/6330ff27e5c9b.png
+    - name: Vite
+      color: "#937df7"
+      icon: https://npm.elemecdn.com/anzhiyu-blog@2.0.8/img/svg/vite-logo.svg
+    - name: Flutter
+      color: "#4499e4"
+      icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/633004063ff15.png
     - name: Git
       color: "#df5b40"
       icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/633006e37c7fd.webp
-    - name: Apifox
-      color: "#e65164"
-      icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/633007087a4dc.webp
+    - name: Photoshop
+      color: "#4082c3"
+      icon: https://img02.anzhiy.cn/adminuploads/1/2022/09/25/63300647e1f10.png
