--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -301,13 +301,13 @@ wowjs:
   mobile: false #移动端是否启用，默认移动端禁用
   animateitem:
   - class: recent-post-item #必填项，需要添加动画的元素的class
-    style: animate__fadeIn #必填项，需要添加的动画
-    duration: 0.7s #选填项，动画持续时间，单位可以是ms也可以是s。例如3s，700ms。
+    style: animate__fadeInUp #必填项，需要添加的动画
+    duration: 0.5s #选填项，动画持续时间，单位可以是ms也可以是s。例如3s，700ms。
     delay: 0 #选填项，动画开始的延迟时间，单位可以是ms也可以是s。例如3s，700ms。
-    offset: 0 #选填项，开始动画的距离（相对浏览器底部）
+    offset: 50 #选填项，开始动画的距离（相对浏览器底部）
     iteration: 1 #选填项，动画重复的次数
   - class: card-widget
-    style: animate__fadeIn
+    style: animate__fadeInUp
   animate_css: https://npm.elemecdn.com/hexo-butterfly-wowjs/lib/animate.min.css
   wow_js: https://npm.elemecdn.com/hexo-butterfly-wowjs/lib/wow.min.js
   wow_init_js: https://npm.elemecdn.com/hexo-butterfly-wowjs/lib/wow_init.js
