样式调整修改

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -265,6 +265,7 @@ waline:
   bg: https://img.recreyed.ml/pinglun.webp
   pageview: false
   option:
+    imageUploader: false
 
 # 留言信
 envelope_comment:
