--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -9,9 +9,9 @@
       link: https://codehhr.cn/
       avatar: https://codehhr.coding.net/p/codehhr/d/images/git/raw/master/avatar/tusiji.png
       descr: 前端、linux
-    - name: 子兔Antg
+    - name: 程序员八一
       link: https://blog.csdn.net/weixin_44745147/
-      avatar: https://profile-avatar.csdnimg.cn/311de4c2556744648ece82a3d8f48334_weixin_44745147.jpg
+      avatar: https://profile.csdnimg.cn/2/D/0/1_weixin_44745147
       descr: java
     - name: Akilar
       link: https://akilar.top/
