--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -429,7 +429,7 @@ tag_ui: # 留空或 index
 # 网站背景图(可以设置颜色或图片)
 # The formal of image: url(http://xxxxxx.com/xxx.jpg)gh
 # background: '#f7f9fe'
-background: url(https://img.recreyed.ml/202211142223334.jpg)
+background: url(https://img.recreyed.ml/96475bde-c9b9-453d-af03-c81267192811.webp)
 
 # Footer Background
 footer_bg: false
