--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -462,7 +462,7 @@ font:
 # 标题字体
 # 左上角网站名字 主頁居中网站名字
 blog_title_font:
-  font_link: https://fonts.googleapis.com/css?family=Playball
+  font_link: https://fonts.googleapis.com/css?family=Playball&display=swap
   font-family: Playball
 
 # The setting of divider icon (水平分隔線圖標設置)
