--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -110,7 +110,7 @@ cover:
   archives_enable: true
   # the position of cover in home page (文章封面显示的位置)
   # left/right/both
-  position: left
+  position: both
   # 文章默认封面
   default_cover:
   - https://img.recreyed.ml/202211142223334.jpg
@@ -130,7 +130,7 @@ post_meta:
     date_format: date # date/relative 顯示日期還是相對日期
     categories: true # true or false 主頁是否顯示分類
     tags: true # true or false 主頁是否顯示標籤
-    label: false # true or false 顯示描述性文字
+    label: true # true or false 顯示描述性文字
   post:
     date_type: both # created or updated or both 文章頁日期是創建日或者更新日或都顯示
     date_format: date # date/relative 顯示日期還是相對日期
@@ -151,8 +151,8 @@ wordcount:
 # 3: auto_excerpt (default)
 # false: do not show the article introduction
 index_post_content:
-  method: false
-  length: 0 # if you set method to 2 or 3, the length need to config
+  method: 1
+  length:  100 # if you set method to 2 or 3, the length need to config
 
 # url随标题变化
 # when you scroll in post, the URL will update according to header id.
@@ -429,7 +429,7 @@ tag_ui: # 留空或 index
 # 网站背景图(可以设置颜色或图片)
 # The formal of image: url(http://xxxxxx.com/xxx.jpg)gh
 # background: '#f7f9fe'
-background: url(https://img.recreyed.ml/96475bde-c9b9-453d-af03-c81267192811.webp)
+background: url(https://img.recreyed.ml/e0d615a6-6507-4334-9758-718130984d26.webp)
 
 # Footer Background
 footer_bg: false
