--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -3,7 +3,7 @@
   link_list:
     - name: Recreyed
       link: https://recreyed.ml/
-      avatar: https://img.recreyed.tk/avatar-1.png
+      avatar: https://img.hitagi.site/avatar-1.png
       descr: 我
     - name: HHR
       link: https://codehhr.cn/
