--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://recreyed.tk
+url: https://hitagi.site
 permalink: posts/:abbrlink/
 permalink_defaults:
 pretty_urls:
