--- a/.github/workflows/aotodeploy.yml
+++ b/.github/workflows/aotodeploy.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: 安装 Hexo
       run: |
-        export TZ='recreyed'
+        export TZ='Kissshot'
         npm install hexo-cli -g
 
     - name: 缓存 Hexo
