--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "hexo generate",
+    "generate": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
+    "build": "hexo clean && hexo generate && hexo deploy",
     "server": "hexo server"
   },
   "hexo": {
