--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,8 +1,8 @@
 - class_name: 帐中人
   class_desc: 
   link_list:
-    - name: Recreyed
-      link: https://recreyed.ml/
+    - name: Kissshot
+      link: https://hitagi.site/
       avatar: https://img.hitagi.site/avatar-1.png
       descr: 我
     - name: HHR
