--- a/.github/workflows/aotodeploy.yml
+++ b/.github/workflows/aotodeploy.yml
@@ -52,9 +52,8 @@ jobs:
       run: |
         cd ./public
         git init
-        git branch -m main
         git config --global user.name '${{ secrets.GITHUBUSERNAME }}'
         git config --global user.email '${{ secrets.GITHUBEMAIL }}'
         git add .
         git commit -m "${{ github.event.head_commit.message }} $(date +"%Z %Y-%m-%d %A %H:%M:%S") Updated By Github Actions"
-        git push --force --quiet "https://${{ secrets.GITHUBUSERNAME }}:${{ secrets.GITHUBTOKEN }}@github.com/${{ secrets.GITHUBUSERNAME }}/${{ secrets.GITHUBUSERNAME }}.github.io.git" main:main
+        git push --force --quiet "https://${{ secrets.GITHUBUSERNAME }}:${{ secrets.GITHUBTOKEN }}@github.com/${{ secrets.GITHUBUSERNAME }}/${{ secrets.GITHUBUSERNAME }}.github.io.git" master:main
