--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ theme: butterfly
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: git@github.com:hearthitagi/kissshot.github.io.git
+  repo: https://github.com/hearthitagi/hearthitagi.github.io.git
   branch: main
 # search
 search:
