--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "build": "hexo clean && hexo generate && hexo deploy",
-    "server": "hexo server"
+    "s": "hexo clean && hexo generate && hexo server"
   },
   "hexo": {
     "version": "6.3.0"
@@ -27,7 +27,6 @@
     "hexo-renderer-marked": "^4.1.0",
     "hexo-renderer-pug": "^2.0.0",
     "hexo-renderer-stylus": "^2.1.0",
-    "hexo-server": "^3.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-server": "^3.0.0"
   }
 }
