--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1,20 +1,3 @@
-#文章展示动画
-wowjs:
-  enable: false #控制动画开关。true是打开，false是关闭
-  priority: 10 #过滤器优先级
-  mobile: false #移动端是否启用，默认移动端禁用
-  animateitem:
-  - class: recent-post-item #必填项，需要添加动画的元素的class
-    style: animate__fadeInUp #必填项，需要添加的动画
-    duration: 0.5s #选填项，动画持续时间，单位可以是ms也可以是s。例如3s，700ms。
-    delay: 0 #选填项，动画开始的延迟时间，单位可以是ms也可以是s。例如3s，700ms。
-    offset: 50 #选填项，开始动画的距离（相对浏览器底部）
-    iteration: 1 #选填项，动画重复的次数
-  - class: card-widget
-    style: animate__fadeInUp
-  animate_css: https://npm.elemecdn.com/hexo-butterfly-wowjs/lib/animate.min.css
-  wow_js: https://npm.elemecdn.com/hexo-butterfly-wowjs/lib/wow.min.js
-  wow_init_js: https://npm.elemecdn.com/hexo-butterfly-wowjs/lib/wow_init.js
 # --------------------------------------
 # 导航设置
 # --------------------------------------
@@ -480,6 +463,23 @@ categoryBar:
   - title: 前端知识
     cover: https://img.hitagi.site/categories-3.jpg
     descr: 这是前端知识描述
+#文章展示动画
+wowjs:
+  enable: true #控制动画开关。true是打开，false是关闭
+  priority: 10 #过滤器优先级
+  mobile: false #移动端是否启用，默认移动端禁用
+  animateitem:
+  - class: recent-post-item #必填项，需要添加动画的元素的class
+    style: animate__fadeInUp #必填项，需要添加的动画
+    duration: 0.5s #选填项，动画持续时间，单位可以是ms也可以是s。例如3s，700ms。
+    delay: 0 #选填项，动画开始的延迟时间，单位可以是ms也可以是s。例如3s，700ms。
+    offset: 50 #选填项，开始动画的距离（相对浏览器底部）
+    iteration: 1 #选填项，动画重复的次数
+  - class: card-widget
+    style: animate__fadeInUp
+  animate_css: https://npm.elemecdn.com/hexo-butterfly-wowjs/lib/animate.min.css
+  wow_js: https://npm.elemecdn.com/hexo-butterfly-wowjs/lib/wow.min.js
+  wow_init_js: https://npm.elemecdn.com/hexo-butterfly-wowjs/lib/wow_init.js
 inject:
   head:
   - <link rel="stylesheet" href="/css/custom.css" media="defer" onload="this.media='all'">
