--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -3,7 +3,7 @@
   link_list:
     - name: Kissshot
       link: https://hitagi.site/
-      avatar: https://img.hitagi.site/avatar-1.png
+      avatar: https://lsky.kissshot.site/img/2025/02/06/67a44befd393a.jpg
       descr: 我
     - name: HHR
       link: https://codehhr.cn/
