--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -3,7 +3,7 @@
   link_list:
     - name: Kissshot
       link: https://hitagi.site/
-      avatar: https://lsky.kissshot.site/img/2025/02/06/67a44befd393a.jpg
+      avatar: https://lsky.kissshot.site/img/2025/02/07/67a56c61e74fd.webp
       descr: 我
     - name: HHR
       link: https://codehhr.cn/
