--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -135,7 +135,7 @@ toc:
   # 是否在页面中显示目录
   page: false
   # 是否显示目录编号
-  number: true
+  number: false
   # 是否默认展开目录
   expand: false
   # 是否使用简洁风格（仅适用于文章）
