修改图片显示大小

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -16,4 +16,4 @@
     - name: Akilar
       link: https://akilar.top/
       avatar: https://npm.elemecdn.com/akiblog@1.0.0/img/author.webp
-      descr: hexo butterfly主题魔改教父
+      descr: 
