--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -346,7 +346,7 @@ copy:
 enter_transitions: true
 # 字体
 font:
-  global-font-size:
+  global-font-size: 16px
   code-font-size:
   font-family:
   code-font-family:
