修改友人帐

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -5,13 +5,9 @@
       link: https://hitagi.site/
       avatar: https://lsky.kissshot.site/img/2025/02/07/67a56c61e74fd.webp
       descr: 我
-    - name: HHR
-      link: https://codehhr.cn/
-      avatar: https://codehhr.coding.net/p/codehhr/d/images/git/raw/master/avatar/tusiji.png
-      descr: 前端、linux
-    - name: 程序员八一
+    - name: Antgeek
       link: https://blog.csdn.net/weixin_44745147/
-      avatar: https://profile.csdnimg.cn/2/D/0/1_weixin_44745147
+      avatar: https://profile-avatar.csdnimg.cn/1e81a9d092d84643918a1824bfe23a25_weixin_44745147.jpg
       descr: java
     - name: Akilar
       link: https://akilar.top/
