修改友联信息

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -12,4 +12,4 @@
     - name: Akilar
       link: https://akilar.top/
       avatar: https://npm.elemecdn.com/akiblog@1.0.0/img/author.webp
-      descr: 
+      descr: 博客魔改
