--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -8,7 +8,7 @@
     - name: Antgeek
       link: https://blog.csdn.net/weixin_44745147/
       avatar: https://profile-avatar.csdnimg.cn/1e81a9d092d84643918a1824bfe23a25_weixin_44745147.jpg
-      descr: java
+      descr: 喜欢各种技术,前端后端大数据均有涉猎,目前从事大数据开发,正在逐步转型web3开发
     - name: Akilar
       link: https://akilar.top/
       avatar: https://npm.elemecdn.com/akiblog@1.0.0/img/author.webp
