修改右下角按钮配置

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -320,9 +320,9 @@ darkmode:
   autoChangeMode: 1
   # 设置明亮模式时间，值在 0 到 24 之间。如果未设置，默认值为 6 和 18
   start: 6
-  end: 24
+  end: 18
 # 在返回顶部按钮中显示滚动百分比
-rightside_scroll_percent: false
+rightside_scroll_percent: true
 # 右下角按钮与底部距离
 rightside-bottom:
 
